# thilha-de-meltano

./: README.md  docker-compose.yml  pyproject.toml
db_data/: postmaster.pid
db_data/base/13481/: pg_internal.init
db_data/base/16384/: 1247  1249  1259  16385  16390  16399  16400  16403  16409  16412  16415  16418  16421  16424  16427  16432  16433  16436  16439  16441  16443  16445  16447  16449  16451  16453  16455  16457  16459  16461  16463  16465  2579  2606  2608  2610  2619  2619_fsm  2620  2658  (+21 more)
db_data/global/: 1260  pg_control  pg_internal.init
db_data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
db_data/pg_xact/: 0000
demo/: meltano.yml
meltano_base_project/: Dockerfile  README.md  meltano.yml
meltano_base_project/pipelines/example_ci_pipeline/: ci-pipeline.yml
meltano_base_project/plugins/loaders/: loaders_config.yml
