[project]
name = "trilha-de-meltano"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasJFaust",email = "lucasjfm.eng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "meltano (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
